--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -450,6 +450,7 @@
                 "template_title": "{{ title_en }}",
 
                 "g_output_voltage_description": "Output voltage is always 11.5V when powered by button.<br>In automatic mode, output voltage is automatically adjusted to input voltage.<br>In manual mode, when input voltage drops below setpoint, backup power is activated.",
+                "g_button_description": "The button on the WB-UPS v.3 module can be used to control other devices via rules.<br><br>When external power is available, the button does not perform any actions on the WB-UPS v.3 module.<br>When external power is not available, a long press turns off the WB-UPS v.3 module.<br><br>Pressing parameters are fixed:<br>- long press time: 2000 ms<br>- second press waiting time: 300 ms",
 
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value."
             },
@@ -463,7 +464,7 @@
 
                 "Output Voltage When Powered Up by Button (V)": "Выходное напряжение при включении кнопкой (В)",
 
-                "g_button_description": "Кнопка на модуле WB-UPS v.3 может использоваться для управления другими устройствами через правила.<br><br>При наличии внешнего питания кнопка не выполняет никаких действий на модуле WB-UPS v.3.<br>При отсутствии внешнего питания длинное нажатие отключает WB-UPS v.3.<br><br>Параметры нажатий фиксированы:<br>- время длинного нажатия: 2000 мс<br>- время ожидания второго нажатия: 300 мс<br><br>",
+                "g_button_description": "Кнопка на модуле WB-UPS v.3 может использоваться для управления другими устройствами через правила.<br><br>При наличии внешнего питания кнопка не выполняет никаких действий на модуле WB-UPS v.3.<br>При отсутствии внешнего питания длинное нажатие отключает WB-UPS v.3.<br><br>Параметры нажатий фиксированы:<br>- время длинного нажатия: 2000 мс<br>- время ожидания второго нажатия: 300 мс",
                 "g_output_voltage_description": "Выходное напряжение при включении кнопкой всегда 11.5 В.<br>В автоматическом режиме выходное напряжение автоматически подстраивается под входное.<br>В ручном режиме при понижении входного напряжения ниже заданного уровня включается резервное питание.",
                 "output_voltage_setpoint_description": "Должно быть как минимум на 0.7 В ниже входного напряжения.",
 
@@ -484,6 +485,7 @@
                 "Load Current when Powered from Battery": "Ток нагрузки при питании от батареи",
                 "Battery Temperature": "Температура батареи",
                 "Battery Capacity": "Уровень заряда батареи",
+                "Temperature": "Температура",
 
                 "Charging": "Заряжается",
                 "Fully Charged": "Полностью заряжена",
