--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -101,6 +101,7 @@
                 "default": 11.5,
                 "scale": 0.001,
                 "order": 2,
+                "required": true,
                 "condition": "output_voltage_control_mode==1",
                 "group": "gg_output_voltage"
             },
@@ -449,8 +450,9 @@
             "en": {
                 "template_title": "{{ title_en }}",
 
-                "g_output_voltage_description": "Output voltage is always 11.5V when powered by button.<br>In automatic mode, output voltage is automatically adjusted to input voltage.<br>In manual mode, when input voltage drops below setpoint, backup power is activated.",
+                "g_output_voltage_description": "The output voltage when powered up by button is always 11.5V.<br><br>In automatic mode, the output voltage is set to 0.7V lower than the input voltage if it is within the operating range and remains stable for 10 seconds.<br>In manual mode, the output voltage is fixed and set via the parameter.<br><br>When the input voltage drops below the output voltage, backup power is activated.",
                 "g_button_description": "The button on the WB-UPS v.3 module can be used to control other devices via rules.<br><br>When external power is available, the button does not perform any actions on the WB-UPS v.3 module.<br>When external power is not available, a long press turns off the WB-UPS v.3 module.<br><br>Pressing parameters are fixed:<br>- long press time: 2000 ms<br>- second press waiting time: 300 ms",
+                "output_voltage_setpoint_description": "Must be at least 0.7V lower than input voltage.",
 
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value."
             },
@@ -465,7 +467,7 @@
                 "Output Voltage When Powered Up by Button (V)": "Выходное напряжение при включении кнопкой (В)",
 
                 "g_button_description": "Кнопка на модуле WB-UPS v.3 может использоваться для управления другими устройствами через правила.<br><br>При наличии внешнего питания кнопка не выполняет никаких действий на модуле WB-UPS v.3.<br>При отсутствии внешнего питания длинное нажатие отключает WB-UPS v.3.<br><br>Параметры нажатий фиксированы:<br>- время длинного нажатия: 2000 мс<br>- время ожидания второго нажатия: 300 мс",
-                "g_output_voltage_description": "Выходное напряжение при включении кнопкой всегда 11.5 В.<br>В автоматическом режиме выходное напряжение автоматически подстраивается под входное.<br>В ручном режиме при понижении входного напряжения ниже заданного уровня включается резервное питание.",
+                "g_output_voltage_description": "Выходное напряжение при включении кнопкой всегда 11.5 В.<br><br>В автоматическом режиме выходное напряжение устанавливается на 0.7 В ниже входного, если оно находится в рабочем диапазоне и остается стабильным в течение 10 секунд.<br>В ручном режиме выходное напряжение фиксировано и задается через параметр.<br><br>При понижении входного напряжения ниже выходного включается резервное питание.",
                 "output_voltage_setpoint_description": "Должно быть как минимум на 0.7 В ниже входного напряжения.",
 
                 "Uninterruptible Power Supply": "Резервное питание",
