--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -223,7 +223,7 @@
             },
             {
                 "id": "input_current_for_charging",
-                "name": "Input Current for Charging",
+                "name": "Input Current For Charging",
                 "units": "A",
                 "scale": 0.001,
                 "round_to": 0.001,
@@ -233,7 +233,7 @@
             },
             {
                 "id": "load_current_when_powered_from_battery",
-                "name": "Load Current when Powered from Battery",
+                "name": "Load Current When Powered From Battery",
                 "units": "A",
                 "scale": 0.001,
                 "round_to": 0.001,
@@ -260,7 +260,7 @@
             },
             {
                 "id": "load_control_in_backup_mode",
-                "name": "Load Control in Backup Mode",
+                "name": "Load Control In Backup Mode",
                 "type": "switch",
                 "reg_type": "coil",
                 "address": 34,
@@ -483,8 +483,8 @@
                 "Output Voltage": "Выходное напряжение",
                 "Battery Voltage": "Напряжение батареи",
                 "Battery Current": "Ток батареи",
-                "Input Current for Charging": "Входной ток для заряда",
-                "Load Current when Powered from Battery": "Ток нагрузки при питании от батареи",
+                "Input Current For Charging": "Входной ток для заряда",
+                "Load Current When Powered From Battery": "Ток нагрузки при питании от батареи",
                 "Battery Temperature": "Температура батареи",
                 "Battery Capacity": "Уровень заряда батареи",
                 "Temperature": "Температура",
@@ -512,7 +512,7 @@
                 "Chip ADC Values": "Значения АЦП чипов",
                 "Charger State": "Состояние зарядника",
                 "Discharger State": "Состояние разрядника",
-                "Load Control in Backup Mode": "Управление нагрузкой в режиме резервного питания",
+                "Load Control In Backup Mode": "Управление нагрузкой в режиме резервного питания",
 
                 "Button": "Кнопка",
                 "Button State": "Состояние кнопки",
