--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -305,6 +305,15 @@
             },
 
             {
+                "id": "restart_charge",
+                "name": "Restart Charge",
+                "type": "pushbutton",
+                "reg_type": "coil",
+                "address": 8,
+                "enabled": false,
+                "group": "gg_debug_charge_discharge"
+            },
+            {
                 "id": "charger_state",
                 "name": "Charger State",
                 "type": "switch",
@@ -513,6 +522,7 @@
                 "Charger State": "Состояние зарядника",
                 "Discharger State": "Состояние разрядника",
                 "Load Control In Backup Mode": "Управление нагрузкой в режиме резервного питания",
+                "Restart Charge": "Перезапустить заряд",
 
                 "Button": "Кнопка",
                 "Button State": "Состояние кнопки",
