fix charge level scale

--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -245,6 +245,7 @@
                 "id": "battery_charge_level",
                 "name": "Battery Charge Level",
                 "units": "%",
+                "scale": 0.01,
                 "reg_type": "input",
                 "address": 8,
                 "group": "gg_ups_channels"
