round charge level

--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -246,6 +246,7 @@
                 "name": "Battery Charge Level",
                 "units": "%",
                 "scale": 0.01,
+                "round_to": 0.1,
                 "reg_type": "input",
                 "address": 8,
                 "group": "gg_ups_channels"
