--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -374,6 +374,26 @@
                 "enabled": false,
                 "group": "gg_debug_charge_discharge"
             },
+            {
+                "id": "ocv",
+                "name": "OCV",
+                "units": "V",
+                "reg_type": "input",
+                "scale": 0.001,
+                "address": 12,
+                "enabled": false,
+                "group": "gg_debug_charge_discharge"
+            },
+            {
+                "id": "charge_counter",
+                "name": "Charge Counter",
+                "units": "mAh",
+                "reg_type": "holding",
+                "scale": 0.1,
+                "address": 20,
+                "enabled": false,
+                "group": "gg_debug_charge_discharge"
+            },
 
 
 
@@ -499,6 +519,7 @@
                 "Battery Temperature": "Температура батареи",
                 "Battery Charge Level": "Уровень заряда батареи",
                 "Temperature": "Температура",
+                "Charge Counter": "Счетчик заряда",
 
                 "Charging": "Заряжается",
                 "Fully Charged": "Полностью заряжена",
