--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -390,6 +390,7 @@
                 "units": "mAh",
                 "reg_type": "holding",
                 "scale": 0.1,
+                "format": "s16",
                 "address": 21,
                 "enabled": false,
                 "group": "gg_debug_charge_discharge"
