templates: ups v.3: fix reg addr (#957)
* templates: ups v.3: fix reg addr
* fix sign as well

--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -390,7 +390,8 @@
                 "units": "mAh",
                 "reg_type": "holding",
                 "scale": 0.1,
-                "address": 20,
+                "format": "s16",
+                "address": 21,
                 "enabled": false,
                 "group": "gg_debug_charge_discharge"
             },
