--- a/templates/config-wb-mwac2_ver2.json.jinja
+++ b/templates/config-wb-mwac2_ver2.json.jinja
@@ -2,12 +2,13 @@
 {% set INPUTS_NUMBER = 6 -%}
 {% set IN_NUM_SHORT_CLEANING_ON_LONG_RES_ALARM = 6 -%}
 {% set MMATRIX_OUTPUTS_NUMBER = 8 -%}
-{% set OUTPUTS_NUMBER = 4 -%}
+{% set OUTPUTS_NUMBER = 5 -%}
 
 {% set OUT_NUM_K1 = 1 -%}
 {% set OUT_NUM_K2 = 2 -%}
 {% set OUT_NUM_ALARM = 3 -%}
 {% set OUT_NUM_CLEANING_MODE = 4 -%}
+{% set OUT_NUM_BUZZER = 5 -%}
 
 {% set IN_MODE_INACTIVE = 3 -%}
 {% set IN_MODE_EDGES = 4 -%}
@@ -56,10 +57,11 @@
             {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
             {
                 "title":
-                {% if out_num == OUT_NUM_K1 %} "Output K1 actions",
-                {% elif out_num == OUT_NUM_K2 %} "Output K2 actions",
-                {% elif out_num == OUT_NUM_ALARM %} "Actions for \"Leakage\" Mode",
-                {% else %} "Actions for \"Wet cleaning\" Mode",
+                {% if out_num == OUT_NUM_K1 %} "Output K1 Actions",
+                {% elif out_num == OUT_NUM_K2 %} "Output K2 Actions",
+                {% elif out_num == OUT_NUM_ALARM %} "Actions for Leakage Mode",
+                {% elif out_num == OUT_NUM_CLEANING_MODE %} "Actions for Wet Cleaning Mode",
+                {% elif out_num == OUT_NUM_BUZZER %} "Buzzer Actions",
                 {% endif %}
                 "id": "gg_in{{ in_num }}_out{{ out_num }}_button_actions",
                 "group": "input_f{{ in_num }}"
@@ -174,7 +176,7 @@
             "in{{ in_num }}_sensor_type": {
                 "title": "Sensor Type",
                 "description": "sensor_type_description",
-                "address": {{ 45 + in_num }},
+                "address": {{ 521 + in_num }},
                 "reg_type": "holding",
                 "enum": [0, 1],
                 "enum_titles": [
@@ -235,22 +237,23 @@
                 "condition": "in{{ in_num }}_mode=={{ IN_MODE_BUTTON }}"
             },
 
-            {% for out_num in range(1, OUTPUTS_NUMBER) -%}
+            {% for out_num in [OUT_NUM_K1, OUT_NUM_K2, OUT_NUM_ALARM, OUT_NUM_BUZZER] -%}
             "in{{ in_num }}_out{{ out_num }}_actions_leakage_sensor": {
                 "group": "gg_in{{ in_num }}_mapping_matrix_actions",
-                "title": 
+                "title":
                     {%- if out_num == OUT_NUM_K1 %} "Output K1",
                     {%- elif out_num == OUT_NUM_K2 %} "Output K2",
-                    {%- else %} "Leakage Mode",
+                    {%- elif out_num == OUT_NUM_ALARM %} "Leakage Mode",
+                    {%- elif out_num == OUT_NUM_BUZZER %} "Buzzer",
                     {%- endif %}
                 "order": {{ out_num }},
                 "address": {{ 8260 + ((in_num - 1) * MMATRIX_OUTPUTS_NUMBER) + (out_num - 1) }},
                 "reg_type": "holding",
                 "default":
-                    {%- if out_num == OUT_NUM_ALARM %} 2,
+                    {%- if out_num == OUT_NUM_ALARM or out_num == OUT_NUM_BUZZER %} 2,
                     {%- else %} 1,
                     {%- endif -%}
-                {% if out_num == OUT_NUM_ALARM %}
+                {% if out_num == OUT_NUM_ALARM or out_num == OUT_NUM_BUZZER %}
                 "enum": [0, 2],
                 "enum_titles": [
                     "Do Nothing",
@@ -287,7 +290,7 @@
                 {% endif -%}
                 "condition": "in{{ in_num }}_mode=={{ IN_MODE_BUTTON }}"
             },
-            "in{{in_num}}_out{{ out_num }}_lp": {
+            "in{{ in_num }}_out{{ out_num }}_lp": {
                 "group": "gg_in{{ in_num }}_out{{ out_num }}_button_actions",
                 "title": "Long Press",
                 "order": 4,
@@ -406,6 +409,20 @@
                 "max": 65534,
                 "default": 10,
                 "group": "g_safety",
+                "order": 1
+            },
+            "safety_buzzer": {
+                "title": "Buzzer Behaviour",
+                "description": "safety_buzzer_description",
+                "address": 952,
+                "reg_type": "holding",
+                "enum": [0, 1],
+                "default": 0,
+                "enum_titles": [
+                    "Does not affect",
+                    "On"
+                ],
+                "group": "g_safety",
                 "order": 2
             },
             "baud_rate": {
@@ -426,9 +443,13 @@
                 "order": 1
             },
 
-            {% for out_num in range(1, OUTPUTS_NUMBER) -%}
+            {% for out_num in [OUT_NUM_K1, OUT_NUM_K2, OUT_NUM_ALARM] -%}
             "out{{ out_num }}_safe_state": {
-                "title": {%if out_num == OUT_NUM_ALARM %}"Leakage Mode"{% else %}"Output K{{ out_num }}"{% endif %},
+                "title":
+                    {%- if out_num == OUT_NUM_K1 %} "Output K1",
+                    {%- elif out_num == OUT_NUM_K2 %} "Output K2",
+                    {%- elif out_num == OUT_NUM_ALARM %} "Leakage Mode",
+                    {%- endif %}
                 "group": "gg_outputs_safe_state",
                 "order": {{ out_num }},
                 "address": {{ 930 + (out_num - 1) }},
@@ -441,7 +462,11 @@
                 ]
             },
             "out{{ out_num }}_safety_behaviour": {
-                "title": {%if out_num == OUT_NUM_ALARM %}"Leakage Mode"{% else %}"Output K{{ out_num }}"{% endif %},
+                "title":
+                    {%- if out_num == OUT_NUM_K1 %} "Output K1",
+                    {%- elif out_num == OUT_NUM_K2 %} "Output K2",
+                    {%- elif out_num == OUT_NUM_ALARM %} "Leakage Mode",
+                    {%- endif %}
                 "group": "gg_safety_behaviour",
                 "order": {{ out_num }},
                 "address": {{ 938 + (out_num - 1) }},
@@ -453,8 +478,15 @@
                     "Switch To the Safety State"
                 ]
             },
+            {% endfor -%}
+            {% for out_num in [OUT_NUM_K1, OUT_NUM_K2, OUT_NUM_ALARM, OUT_NUM_BUZZER] -%}
             "out{{ out_num }}_safety_input_control": {
-                "title": {%if out_num == OUT_NUM_ALARM %}"Leakage Mode"{% else %}"Output K{{ out_num }}"{% endif %},
+                "title":
+                    {%- if out_num == OUT_NUM_K1 %} "Output K1",
+                    {%- elif out_num == OUT_NUM_K2 %} "Output K2",
+                    {%- elif out_num == OUT_NUM_ALARM %} "Leakage Mode",
+                    {%- elif out_num == OUT_NUM_BUZZER %} "Buzzer",
+                    {%- endif %}
                 "group": "gg_safety_input_control",
                 "order": {{ out_num }},
                 "address": {{ 946 + (out_num - 1) }},
@@ -470,7 +502,7 @@
             {% endfor -%}
 
             "wet_cleaning_mode_timer_min": {
-                "title": "\"Wet Cleaning\" Mode Timer (min)",
+                "title": "Wet Cleaning Mode Timer (min)",
                 "description": "wet_cleaning_mode_timer_description",
                 "address": 975,
                 "reg_type": "holding",
@@ -610,7 +642,7 @@
             },
             {% endfor -%}
 
-            {% for out_num in range(1, OUTPUTS_NUMBER - 1) -%}
+            {% for out_num in range(1, OUTPUTS_NUMBER - 2) -%}
             {
                 "name": "Output K{{ out_num }}",
                 "reg_type": "coil",
@@ -646,6 +678,14 @@
                 "type": "switch",
                 "sporadic": true,
                 "group": "wet_cleaning_mode"
+            },
+            {
+                "name": "Buzzer",
+                "reg_type": "coil",
+                "address": 4,
+                "type": "switch",
+                "sporadic": true,
+                "group": "gg_outputs_channels"
             },
             {
                 "name": "Serial",
@@ -734,27 +774,26 @@
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime",
 
-                "inputs_control_in_safety_mode_description": "Does not affect \"leakage sensor\" mode",
+                "inputs_control_in_safety_mode_description": "Does not affect \"Leakage Sensor\" mode",
                 "safety_mode_description": "If the RS-485 connection is lost, the module will work autonomously, but you can additionally set its behavior in this case",
                 "safety_behaviour_description": "Safe state is configured on \"Outputs\" tab",
-                "poll_timeout_description": "Time before entering safety mode after loss of connection. Recommended 10 s",
+                "poll_timeout_description": "Time before entering safety mode after loss of connection. Recommended 10s",
+                "safety_buzzer_description": "\"Does not affect\" - the buzzer behaves according to the input settings. \"On\" - the buzzer will be ON regardless of the input settings when the device is in safety mode and the leakage sensor is triggered. Supported since firmware 1.22.0",
                 "restore_outputs_state_after_leakage_fix_description": "\"On\" - relays are set to the state before the leakage, then the settings of the interaction of inputs with the relay are analyzed. \"Off\" - the settings of the interaction of inputs with the relays are analyzed immediately",
-                "relays_state_after_poweron_description": "Default - \"Switch To the Safety State\"",
+                "relays_state_after_poweron_description": "Default - Switch To the Safety State",
 
-                "Leakage Mode": "\"Leakage\" Mode",
-
-                "Cleaning Mode": "\"Wet Cleaning\" Mode",
-                "wet_cleaning_mode_description": "In the \"Wet Cleaning\" mode, the module does not respond to leakage sensors",
+                "Cleaning Mode": "Wet Cleaning Mode",
+                "wet_cleaning_mode_description": "In the Wet Cleaning mode the module does not respond to leakage sensors",
                 "wet_cleaning_mode_timer_description": "1 - 360 min",
 
-                "sensor_type_description": "Supported since firmware 1.21.8",
+                "sensor_type_description": "Supported since firmware 1.22.0",
 
-                "debounce_description": "For button press detection, the value must be 5 - 10 times less than the waiting time for the second press. Adds a delay to the response to presses. Recommended 50 ms",
-                "debounce_description_no_buttons": "Adds a delay to the response. Recommended 50 ms",
+                "debounce_description": "For button press detection, the value must be 5-10 times less than the waiting time for the second press. Adds a delay to the response to presses. Recommended 50ms",
+                "debounce_description_no_buttons": "Adds a delay to the response. Recommended 50ms",
                 "lp_hold_time_title": "Long Press Time (ms)",
-                "lp_hold_time_description": "If the press lasts longer, we consider it long. Recommended 1000 ms",
+                "lp_hold_time_description": "If the press lasts longer, we consider it long. Recommended 1000ms",
                 "secp_waiting_time_title": "Second Press Waiting Time (ms)",
-                "secp_waiting_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press. Recommended 300 ms",
+                "secp_waiting_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press. Recommended 300ms",
 
                 "counter_offset_description": "Added to the volume counter to match the readings",
                 "counter_pulse_weight_description": "Number of liters per pulse from the meter. Indicated on the meter and/or its documentation"
@@ -774,16 +813,16 @@
                 "counter_offset_description": "Прибавляется к счетчику объема для совпадения показаний",
                 "counter_pulse_weight_description": "Количество литров на импульс со счетчика. Указано на счетчике и/или документации к нему",
 
-                "Cleaning Mode": "Режим \"Влажная уборка\"",
+                "Cleaning Mode": "Влажная уборка",
                 "wet_cleaning_mode_description": "В режиме \"Влажная уборка\" модуль не реагирует на датчики протечки",
-                "wet_cleaning_mode_timer_description": "1 — 360 мин",
-                "\"Wet Cleaning\" Mode Timer (min)": "Таймер режима \"Влажная уборка\" (мин)",
+                "wet_cleaning_mode_timer_description": "1 - 360 мин",
+                "Wet Cleaning Mode Timer (min)": "Таймер режима \"Влажная уборка\" (мин)",
 
                 "Sensor Type": "Тип датчика",
                 "Normally Open (NO)": "Нормально открытый (NO)",
                 "Normally Closed (NC)": "Нормально закрытый (NC)",
 
-                "sensor_type_description": "Поддерживается с версии прошивки 1.21.8",
+                "sensor_type_description": "Поддерживается с версии прошивки 1.22.0",
 
                 "Mode": "Режим работы",
                 "Debounce (ms)": "Время подавления дребезга (мс)",
@@ -816,6 +855,7 @@
                 "P{{ lp_in_num }} Counter Reset": "Сброс счетчика P{{ lp_in_num }}",
                 {% endfor -%}
 
+                "Buzzer": "Зуммер",
                 "Leakage Mode": "Режим \"Протечка\"",
                 "Leakage Mode Reset": "Сброс режима \"Протечка\"",
 
@@ -843,13 +883,16 @@
                 "Off": "Выключен",
                 "On": "Включен",
                 "Restore Outputs State After Leakage Fix": "Восстанавливать состояние кранов после устранения протечки",
+                "Does not affect": "Не менять поведение",
 
                 "Safety Mode": "Безопасный режим",
                 "Safety Behaviour": "Действие в безопасном режиме",
                 "Safety Timer (s)": "Таймаут безопасного режима (с)",
+                "Buzzer Behaviour": "Поведение зуммера при срабатывании датчика протечки",
                 "safety_mode_description": "При потере связи по RS-485 модуль будет работать автономно, но можно дополнительно задать его поведение в этом случае",
                 "poll_timeout_description": "Время до перехода в безопасный режим после потери связи. Рекомендовано 10 с",
-                "restore_outputs_state_after_leakage_fix_description": "\"Включен\" — реле устанавливются в положение до протечки, затем анализируются настройки взаимодействия входов с реле. \"Выключен\" — сразу анализируются настройки взаимодействия входов с реле",
+                "safety_buzzer_description": "\"Не менять поведение\" - зуммер ведет себя в соответствии с настройками входов. \"Включен\" - зуммер будет включен независимо от настроек входов, когда устройство находится в безопасном режиме и срабатывает датчик протечки. Поддерживается с версии прошивки 1.22.0",
+                "restore_outputs_state_after_leakage_fix_description": "\"Включен\" - реле устанавливются в положение до протечки, затем анализируются настройки взаимодействия входов с реле. \"Выключен\" - сразу анализируются настройки взаимодействия входов с реле",
                 "safety_behaviour_description": "Безопасное состояние настраивается на вкладке \"Выходы\"",
                 "inputs_control_in_safety_mode_description": "Не влияет на режим \"Датчик протечки\"",
                 "Don't Change State": "Ничего не делать",
@@ -857,15 +900,15 @@
                 "Don't Change": "Не блокировать",
                 "Disable in Safety Mode": "Блокировать в безопасном режиме",
                 "Enable Only in Safety Mode": "Разрешить только в безопасном режиме",
-                "relays_state_after_poweron_description": "По умолчанию - \"Перевести в безопасное состояние\"",
+                "relays_state_after_poweron_description": "По умолчанию - Перевести в безопасное состояние",
 
                 "Press Parameters": "Параметры нажатий",
-                "debounce_description": "Для детектирования нажатий значение должно быть в 5 — 10 раз меньше, чем время ожидания второго нажатия. Вносит задержку в реакцию на нажатия. Рекомендовано 50 мс",
+                "debounce_description": "Для детектирования нажатий значение должно быть в 5-10 раз меньше, чем время ожидания второго нажатия. Вносит задержку в реакцию на нажатия. Рекомендовано 50 мс",
                 "debounce_description_no_buttons": "Вносит задержку в реакцию. Рекомендовано 50 мс",
                 "lp_hold_time_title": "Время длинного нажатия (мс)",
                 "lp_hold_time_description": "Если нажатие длится дольше - считаем его длинным. Рекомендовано 1000 мс",
                 "secp_waiting_time_title": "Время ожидания второго нажатия (мс)",
-                "secp_waiting_time_description": "Если за указанное время второго нажатия не было — считаем нажатие одиночным. 0 — отключит все нажатия кроме короткого и длинного. Вносит задержку в реакцию на короткое нажатие. Рекомендовано 300 мс",
+                "secp_waiting_time_description": "Если за указанное время второго нажатия не было - считаем нажатие одиночным. 0 - отключит все нажатия кроме короткого и длинного. Вносит задержку в реакцию на короткое нажатие. Рекомендовано 300 мс",
 
                 "Contact Closure": "Замыкание контакта",
                 "Contact Opening": "Размыкание контакта",
@@ -877,10 +920,11 @@
                 "Output K1": "Выход K1",
                 "Output K2": "Выход K2",
 
-                "Output K1 actions": "Действия для выхода K1",
-                "Output K2 actions": "Действия для выхода K2",
-                "Actions for \"Leakage\" Mode": "Действия для режима \"Протечка\"",
-                "Actions for \"Wet cleaning\" Mode": "Действия для режима \"Влажная уборка\"",
+                "Output K1 Actions": "Действия для выхода K1",
+                "Output K2 Actions": "Действия для выхода K2",
+                "Actions for Leakage Mode": "Действия для режима \"Протечка\"",
+                "Actions for Wet Cleaning Mode": "Действия для режима \"Влажная уборка\"",
+                "Buzzer Actions": "Действия для зуммера",
 
                 "9600 bps": "9600 бит/с",
                 "19200 bps": "19200 бит/с",
