--- a/templates/config-wb-mwac2_ver2.json.jinja
+++ b/templates/config-wb-mwac2_ver2.json.jinja
@@ -744,7 +744,7 @@
                 "group": "hw_info"
             },
             {
-                "name": "Battery State, Measured at Module Startup",
+                "name": "Battery State Measured at Module Startup",
                 "id": "Battery State",
                 "reg_type": "input",
                 "address": 971,
@@ -865,7 +865,7 @@
                 "Uptime": "Время работы",
                 "MCU Temperature": "Температура МК",
                 "MCU Voltage": "Напряжение питания МК",
-                "Battery State, Measured at Module Startup": "Состояние батарейки, измерено при включении модуля",
+                "Battery State Measured at Module Startup": "Состояние батарейки, измеренное при включении модуля",
                 "Replacement Required": "Требуется замена",
                 "Normal": "Нормальное",
                 "Good": "Хорошее",
