--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -362,7 +362,7 @@
             },
             {
                 "id": "discharge_voltage_setpoint",
-                "name": "Discharge Voltage Desired Setpoint",
+                "name": "Discharge Voltage Setpoint",
                 "units": "V",
                 "reg_type": "input",
                 "scale": 0.001,
@@ -515,6 +515,8 @@
 
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
 
+                "Discharge Voltage Setpoint": "Discharge Voltage Desired Setpoint",
+
                 "enum_led_enabled": "Enabled",
                 "enum_led_disabled": "Disabled",
                 "enum_parallel_disabled": "Disabled",
@@ -568,7 +570,7 @@
                 "Overheat, Not Working": "Высокая, работа запрещена",
                 "Temperature Hardware Protection": "Аппаратная защита по температуре",
                 "Charging Current Setpoint": "Уставка тока заряда",
-                "Discharge Voltage Desired Setpoint": "Желаемая уставка выходного напряжения",
+                "Discharge Voltage Setpoint": "Желаемая уставка выходного напряжения",
                 "Discharge Voltage Real Setpoint": "Фактическая уставка выходного напряжения",
                 "Max Discharge Current": "Максимальный ток разряда",
                 "VINREG Setpoint": "Уставка VINREG",
