fix fader_dec_rgb address

--- a/templates/config-wb-led.json.jinja
+++ b/templates/config-wb-led.json.jinja
@@ -512,7 +512,7 @@
                 "group": "gg_fader_{{inc_dec}}",
                 "title": "RGB Strip {{title}}",
                 "order": {{order[loop.index0]}},
-                "address": {{3012 + loop.index0}},
+                "address": {{3012 + loop.index0 + ptr}},
                 "reg_type": "holding",
                 "default": 1000,
                 "min": 0,
