Fix: TDeviceTemplatesTest.Validate.dat

--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -1,19 +1,19 @@
 {% set INPUTS_NUMBER = 2 -%}
 
 {
-    "title": "WB-MAI2-mini_template_title",
-    "device_type": "WB-MAI2-mini/CC",
+    "title": "WB-MAI2-MINI_template_title",
+    "device_type": "WB-MAI2-MINI/CC",
     "group": "g-wb",
     "hw": [
         {
             "signature": "MAI2CC"
         },
         {
-            "signature": "WB-MAI2-mini/CC v.3"
+            "signature": "WB-MAI2-MINI/CC v.3"
         }
     ],
     "device": {
-        "name": "WB-MAI2-mini/CC",
+        "name": "WB-MAI2-MINI/CC",
         "id": "wb-mai2-mini",
         "response_timeout_ms": 1,
         "enable_wb_continuous_read": true,
@@ -246,12 +246,12 @@
 
         "translations": {
             "en": {
-                "WB-MAI2-mini_template_title": "WB-MAI2-mini/CC (2-channel analog input module)",
+                "WB-MAI2-MINI_template_title": "WB-MAI2-MINI/CC (2-channel analog input module)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime (s)"
             },
             "ru": {
-                "WB-MAI2-mini_template_title": "WB-MAI2-mini/CC (2-канальный модуль измерения токового сигнала)",
+                "WB-MAI2-MINI_template_title": "WB-MAI2-MINI/CC (2-канальный модуль измерения токового сигнала)",
                 "Inputs": "Входы",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
