--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -1,8 +1,8 @@
 {% set INPUTS_NUMBER = 2 -%}
 
 {
-    "title": "WB-MAI2-MINI_template_title",
-    "device_type": "WB-MAI2-MINI/CC",
+    "title": "WB-MAI2_template_title",
+    "device_type": "WB-MAI2",
     "group": "g-wb",
     "hw": [
         {
@@ -246,12 +246,12 @@
 
         "translations": {
             "en": {
-                "WB-MAI2-MINI_template_title": "WB-MAI2-MINI/CC (2-channel analog input module)",
+                "WB-MAI2_template_title": "WB-MAI2-MINI/CC (2-channel analog input module)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime (s)"
             },
             "ru": {
-                "WB-MAI2-MINI_template_title": "WB-MAI2-MINI/CC (2-канальный модуль измерения токового сигнала)",
+                "WB-MAI2_template_title": "WB-MAI2-MINI/CC (2-канальный модуль измерения токового сигнала)",
                 "Inputs": "Входы",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
